<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ff94fff8">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Show_Choice_Button"
        android:id="@+id/showChoiceId"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/radioGroupId"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/title"
        android:text="WILL YOU BE THERE?"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/decision"
        android:id="@+id/decisionId"
        android:layout_alignTop="@+id/showChoiceId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:layout_below="@+id/showChoiceId"/>

    <RadioGroup
        android:id="@+id/radioGroupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/title">

        <RadioButton
            android:id="@+id/positive_radioButton"
            android:text="@string/positive_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/negative_radioButton"
            android:text="@string/negative_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/maybe_radioButton"
            android:text="@string/maybe_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
</RelativeLayout>
